🌌 Fix spacing

--- a/main.css
+++ b/main.css
@@ -114,7 +114,7 @@ pre {
   white-space: normal;
 }
 
-code {
-  margin-bottom: 10vh;
+.spacing {
+  height: 10vh;
 }
 /*# sourceMappingURL=main.css.map */
